# k8s-ldap-auth-rs

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: args.rs  conns.rs  ldap.rs  logging.rs  main.rs  token.rs
tests/: ad-schema.ldif  entries.ldif  index-samaccountname.ldif  schema.ldif
tests-fixtures/: entries.ldif
