[package]
name = "k8s-ldap-auth-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustls-pki-types = "1.13"
k8s-openapi = { version = "0.27", features = ["v1_35"] }
base64 = "0.22"
ldap3 = "0.12.1"
dotenvy = "0.15.7"
async-trait = "0.1"
