[package]
name = "k8s-ldap-auth-rs"
version = "0.4.0"
edition = "2024"
description = "A webhook authentication server for a Kubernetes cluster"
keywords = ["kubernetes", "k8s", "webhook-authentication", "rust", "ldap"]
license = "Apache-2.0"
rust-version = "1.96.1"
repository = "https://github.com/thiagoc01/k8s-ldap-auth-rs"

[dependencies]
clap = {version = "4.6", features = ["env"] }
chrono = "0.4"
tokio = { version = "1", features = ["net", "rt-multi-thread", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
tokio-util = { version = "0.7", features = ["rt"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustls-pki-types = "1.13"
k8s-openapi = { version = "0.27", features = ["v1_35"] }
base64 = "0.22"
ldap3 = "0.12.1"
dotenvy = "0.15.7"
async-trait = "0.1"
native-tls = "0.2"
testcontainers = { version = "0.27", optional = true, features = ["host-port-exposure"] }
rcgen = "0.14"
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[dev-dependencies]
rstest = "0.26"
serial_test = "3.5.0"
dtor = "1"
port-selector = "0.1.7"
pretty_assertions = "1.4"

[features]
tests-ldap-ext = ["dep:testcontainers"]